--- a/site/src/paginas/home/Lading.css
+++ b/site/src/paginas/home/Lading.css
@@ -6,7 +6,7 @@
 body{
     height: 100vh;
     box-sizing: border-box;
-    background-color: #FFFFFF;
+    background-color: #F8F4E1;
     color: black;
     font-family: "Roboto", sans-serif;
 }
@@ -77,7 +77,7 @@ body{
 }
 
 .container__inicio{
-    background: url("../../../public/assets/image/paisagem.png");
+    background: url("./assets/paisagem.png");
     background-position: center;
     background-size: cover;
     background-attachment: fixed; 
@@ -135,7 +135,7 @@ body{
     text-decoration: none;
     background-color: #DFE9DC;
     border: 1px solid #CDCDCD;
-    width: 40%;
+    width: 50%;
     display: flex;
     align-items: center;
     border-radius:0px 50px 0px 0px;
@@ -178,7 +178,6 @@ body{
     font-size: 18px;
     background-color: #3D3D3D;
     padding: 20px;
-    
 }
 
 .rodape__link{
