--- a/site/src/paginas/valores/index.css
+++ b/site/src/paginas/valores/index.css
@@ -123,15 +123,21 @@ body{
     height: 50%;
     width: 50%;  
   }
-  .footer{
-    margin-top: 10vh;
-    height: 20vh;
-    max-width: 100vw;
-    background-color: #2d2d2d;
+  
+.rodape{
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    background-color: #3D3D3D;
+    padding: 20px;
+}
+
+.rodape__link{
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
     color: white;
-    padding: 40px 20px;
-    text-align: center;
-  }
+}
 
 
   @keyframes slideInLetter {
@@ -155,7 +161,8 @@ body{
       transform: translateX(0);
     }
   }
-    
+   
+
 
 
 
