--- a/site/src/paginas/valores/index.css
+++ b/site/src/paginas/valores/index.css
@@ -8,6 +8,20 @@ body{
     margin: 0;
 }
 
+.cabecalho{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #A02323;
+  padding: 10px;
+}
+
+.logo{
+  height: 50px;
+  margin-left: 30px;
+  margin-right: 10px;
+}
+
 .banner{
     height: 70vh;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(../../../public/assets/image/bannerValoresS2.jpg);
