--- a/site/src/paginas/localizacaoMaquinas/style.css
+++ b/site/src/paginas/localizacaoMaquinas/style.css
@@ -3,37 +3,32 @@
     padding: 0;
 }
 
-a {
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-}
-
-a:hover {
-    opacity: 0.7;
+.cabecalho {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #A02323;
+    padding: 10px;
 }
 
 .logo {
-    font-size: 24px;
-    letter-spacing: 4px;
+    height: 50px;
+    margin-left: 30px;
+    margin-right: 10px;
 }
 
-nav {
+.tema {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background: #A02323;
-    height: 8vh;
 }
 
-.nav-list {
-    list-style: none;
-    display: flex;
-}
-
-.nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
+.temas {
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+    margin-right: 70px;
 }
 
 main {
@@ -46,4 +41,36 @@ main {
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.rodape {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    background-color: #3D3D3D;
+    padding: 20px;
+}
+
+.rodape__link {
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+}
+
+.temas:hover {
+    color: gray;
+}
+
+.projeto__btn:hover {
+    color: gray;
+}
+
+.container__saibamais:hover {
+    color: gray;
+}
+
+.sustentabilidade__link a:hover {
+    background-color: #719B25;
+    color: #DFE9DC;
 }
