--- a/site/src/paginas/home/Lading.css
+++ b/site/src/paginas/home/Lading.css
@@ -177,6 +177,7 @@ body{
     justify-content: space-between;
     font-size: 18px;
     background-color: #3D3D3D;
+    color: white;
     padding: 20px;
 }
 
