--- a/site/src/paginas/valores/index.css
+++ b/site/src/paginas/valores/index.css
@@ -7,6 +7,15 @@ body{
     box-sizing: border-box;
     margin: 0;
 }
+.temas{
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  margin-right: 70px;
+  font-family: "Kumb-Sans";
+}
+
 
 .cabecalho{
   display: flex;
@@ -144,15 +153,30 @@ body{
     font-size: 18px;
     background-color: #3D3D3D;
     padding: 20px;
+    font-family: "Kumb-Sans";
+    margin-top: 300px;
+    color: #fff;
 }
 
 .rodape__link{
+    display: flex;
+    flex-direction: column;
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
     color: white;
 }
-
+.org-txt{
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.org-link{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
   @keyframes slideInLetter {
     to {
@@ -181,7 +205,7 @@ body{
 
 
 
-    .txt-banner span:nth-child(1)  { animation-delay: 0.05s; }
+.txt-banner span:nth-child(1)  { animation-delay: 0.05s; }
 .txt-banner span:nth-child(2)  { animation-delay: 0.10s; }
 .txt-banner span:nth-child(3)  { animation-delay: 0.15s; }
 .txt-banner span:nth-child(4)  { animation-delay: 0.20s; }
