--- a/site/src/paginas/localizacaoMaquinas/style.css
+++ b/site/src/paginas/localizacaoMaquinas/style.css
@@ -77,14 +77,27 @@ section {
 
 .contribuindo {
     margin: auto;
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 15px;
 }
 
 h2 {
     margin-bottom: 10px;
 }
 
+.titulosSection {
+    margin-left: 240px;
+    margin-bottom: 10px;
+}
+
+.textoFinal {
+    font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 60px;
+    margin-top: -5px;
+
+}
 
 
 .rodape {
