--- a/site/src/paginas/localizacaoMaquinas/style.css
+++ b/site/src/paginas/localizacaoMaquinas/style.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
 }
 
 .cabecalho {
@@ -59,6 +66,7 @@ main {
     margin-left: 10px;
     margin-bottom: 20px;
     border-radius: 10px;
+    background-color: rgba(221, 217, 217, 0.1);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
 }
@@ -69,16 +77,20 @@ section {
     margin: auto;
     margin-bottom: 20px;
     border-radius: 10px;
+    background-color: rgba(221, 217, 217, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .beneficios {
     margin-left: 268px;
+    min-width: 800px;
 }
 
 .contribuindo {
     margin: auto;
-    margin-top: 25px;
-    margin-bottom: 15px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 h2 {
@@ -86,19 +98,16 @@ h2 {
 }
 
 .titulosSection {
-    margin-left: 240px;
-    margin-bottom: 10px;
+    margin-left: 205px;
+    margin-bottom: 20px;
 }
 
 .textoFinal {
     font-size: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 60px;
     margin-top: -5px;
-
 }
-
 
 .rodape {
     display: flex;
@@ -106,28 +115,29 @@ h2 {
     font-size: 18px;
     background-color: #3D3D3D;
     padding: 20px;
+    font-family: "Kumb-Sans";
+    margin-top: 50px;
+    color: #fff;
 }
 
 .rodape__link {
+    display: flex;
+    flex-direction: column;
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
     color: white;
 }
 
-.temas:hover {
-    color: gray;
+.org-txt {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.projeto__btn:hover {
-    color: gray;
-}
-
-.container__saibamais:hover {
-    color: gray;
-}
-
-.sustentabilidade__link a:hover {
-    background-color: #719B25;
-    color: #DFE9DC;
+.org-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
