Atualização imagem reciclagem

--- a/site/src/paginas/sobreProjeto/style.css
+++ b/site/src/paginas/sobreProjeto/style.css
@@ -54,8 +54,10 @@ body{
 }
 
 .imagem-reciclagem{
-    margin-left: 300px;
-    padding-bottom: 50px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
 }
 
 .reciclagem__titulo{
