--- a/site/src/paginas/localizacaoMaquinas/style.css
+++ b/site/src/paginas/localizacaoMaquinas/style.css
@@ -67,7 +67,7 @@ main {
     margin-left: 10px;
     margin-bottom: 20px;
     border-radius: 10px;
-    background-color: rgba(221, 217, 217, 0.1);
+    background-color: rgba(221, 217, 217);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
 }
@@ -78,13 +78,12 @@ section {
     margin: auto;
     margin-bottom: 20px;
     border-radius: 10px;
-    background-color: rgba(221, 217, 217, 0.1);
+    background-color: rgba(221, 217, 217);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
 }
 
 .beneficios {
-    margin-left: 268px;
     min-width: 800px;
 }
 
